.nais/network-policy/network-policy-prod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    team: personbruker
  name: nav-dekoratoren-everyones-invited
  namespace: personbruker
spec:
  podSelector:
    matchLabels:
      app: nav-dekoratoren
  ingress:
    - from:
      - namespaceSelector: {}
  policyTypes:
    - Ingress
